--- a/belongs-to-bnb.ipynb
+++ b/belongs-to-bnb.ipynb
@@ -491,6 +491,16 @@
     "### Conclusion\n",
     "In this lab we worked on the \"Has One\" and \"Has Many\" relations in SQL. We began by mapping out the relations between the tables, which gave us a better idea of how we could then join them in our queries. We finished the lab by creating queries using JOIN clauses that connect the tables using these relationships."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resources\n",
+    "\n",
+    "* [SAT Results](https://data.cityofnewyork.us/Education/2012-SAT-Results/f9bf-2cp4)\n",
+    "* [School District Breakdown](https://data.cityofnewyork.us/Education/School-District-Breakdowns/g3vh-kbnw)"
+   ]
   }
  ],
  "metadata": {
