--- a/belongs-to-bnb.ipynb
+++ b/belongs-to-bnb.ipynb
@@ -12,14 +12,14 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "In this lab we will continue to explore the relationships between data in different tables of a database. The Airbnb database for this lab contains four tables, `hosts`, `listings`, `locations`, and `neighborhoods`. In order to understand and analyze the data, we need to first understand the relationships between the tables. Relationships include \"Has One\" and \"Has Many\". For example, the `listings` table has a column \"host_id\" which HAS ONE record in hosts table that it corresponds to (a listing will only have one host). The `locations` table has an id column which HAS MANY corresponding records in the `listings` table (a location will have more than one listing). "
+    "In this lab we will continue to explore the relationships between data in different tables of a database. The Airbnb database for this lab contains four tables, `hosts`, `listings`, `locations`, and `neighborhoods`. In order to understand and analyze the data, we need to first understand the relationships between the tables. Relationships include \"Has One\" and \"Has Many\". For example, a `listing` has one host. And a `location` has many listings. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's begin by connecting to the database and reviewing the schema of the tables."
+    "Ok, now let's begin by connecting to the database and reviewing the schema of the tables."
    ]
   },
   {
@@ -277,29 +277,9 @@
    "metadata": {},
    "source": [
     "### Relationships\n",
-    "To help us better understand the relationships, create queries below that JOIN the tables. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Have them map out the relationships "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*  host\n",
-    "    * include the host name, and host id\n",
-    "    \n",
-    "* A location belongs to a neighborhoods \n",
-    "    * neighborhood_id, latitude, longitude\n",
-    "* A neighborhood belongs to a neighborhood group\n",
+    "To help us better understand the relationships, create queries below that JOIN the tables.  Before doing so, write our the relationships between each of the entities.  \n",
     "\n",
-    "* listing \n",
-    "    * name, host_id, location_id, room_type, price, occupancy"
+    "> Remember that if there is a foreign key on a table, this means that the entity has one of the other table.  For example, the `neighborhood_id` on `location` means that a location has one neighborhood."
    ]
   },
   {
@@ -505,7 +485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
